# data-svd

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local.ci  data-svd.cabal  default.nix
.golden/stm32f405/: golden
.golden/stm32f405-isrs/: golden
.golden/stm32f405-memmap/: golden
app/: Main.hs
src/Data/: SVD.hs
src/Data/Bits/: Pretty.hs
src/Data/SVD/: Diff.hs  Dim.hs  IO.hs  Lens.hs  Parse.hs  Pretty.hs  Types.hs  Util.hs
src/Data/SVD/Pretty/: Box.hs  Explore.hs
test/: DimSpec.hs  PrettyBitsSpec.hs  SamplesSpec.hs
test/samples/: stm32f405.svd
