cabal-version:       2.2
name:                data-svd
version:             0.1.0.0
synopsis:            SVD (System view description) file handling
description:         Parse, print, diff SVD files
homepage:            https://github.com/distrap/data-svd
license:             BSD-3-Clause
license-file:        LICENSE
author:              sorki
maintainer:          srk@48.io
copyright:           2023 sorki
category:            Embedded
build-type:          Simple

extra-source-files:
    LICENSE
    README.md

extra-doc-files:
    CHANGELOG.md

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Bits.Pretty
                       Data.SVD
                       Data.SVD.Diff
                       Data.SVD.Parse
                       Data.SVD.Pretty
                       Data.SVD.Types
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint
                     , containers
                     , cereal
                     , data-default-class
                     , Diff
                     , hxt
                     , hxt-xpath
                     , safe
                     , text
  default-language:    Haskell2010

executable data-svd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-svd
  default-language:    Haskell2010


test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PrettyBitsSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:       base >= 4.7 && < 5
                     , data-svd
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/distrap/data-svd
